force-app/main/default/objects/Attention__c/Attention__c.object-meta.xml
<CustomObject>
    <label>Attention</label>
    <nameField>
        <label>Attention Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attentions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>