force-app/main/default/objects/Attention__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Personnel</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Attentions</relationshipLabel>
    <relationshipName>Attentions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>