force-app/main/default/objects/Attention__c/fields/This_Closed_Ticket__c.field-meta.xml
<CustomField>
    <fullName>This_Closed_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This Closed Ticket</label>
    <type>Checkbox</type>
</CustomField>